--- a/BaseTest/src/main/res/layout/activity_http_test.xml
+++ b/BaseTest/src/main/res/layout/activity_http_test.xml
@@ -90,6 +90,14 @@
                     android:text="上传文件" />
 
             <Button
+                    android:id="@+id/testGzip"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/abc_action_button_min_height_material"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:text="Gzip测试" />
+
+            <Button
                 android:id="@+id/clearResult"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/abc_action_button_min_height_material"
