更新逻辑优化

--- a/Framework/src/main/res/values/common_string.xml
+++ b/Framework/src/main/res/values/common_string.xml
@@ -17,10 +17,10 @@
 
 
     <string name="version_update">版本更新</string>
-    <string name="dialog_apk_update">发现新版本：</string>
+    <string name="dialog_apk_update_title">发现新版本：</string>
     <string name="dialog_apk_version">版本号</string>
     <string name="dialog_apk_updating">版本 %1$s 更新中...</string>
-    <string name="dialog_apk_updateinfo">版本内容：</string>
+    <string name="dialog_apk_update_info_pre">版本内容：&lt;BR&gt;</string>
 
     <string name="custom_density">360</string>
 
