--- a/LibDialog/src/main/res/layout/common_progress_dialog.xml
+++ b/LibDialog/src/main/res/layout/common_progress_dialog.xml
@@ -1,116 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp"
+    android:background="@drawable/com_bihe0832_common_dialog_bg"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/update_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/com_bihe0832_common_dialog_bg"
-        android:orientation="vertical">
+        android:layout_margin="24dp"
+        android:gravity="center"
+        android:textColor="@color/com_bihe0832_dialog_text"
+        android:textSize="@dimen/com_bihe0832_dialog_title_text_size"
+        android:textStyle="bold"
+        tools:text="版本更新" />
 
     <TextView
-            android:id="@+id/update_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="24dp"
-            android:gravity="center"
-            tools:text="版本更新"
-            android:textColor="@color/com_bihe0832_dialog_text"
-            android:textSize="@dimen/com_bihe0832_dialog_title_text_size"
-            android:textStyle="bold" />
-
-    <TextView
-            android:id="@+id/update_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:lineSpacingMultiplier="1.5"
-            android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
-            android:textColor="@color/com_bihe0832_dialog_hint"
-            tools:text="1. 适配Android Q \n2. 修复若干bug" />
+        android:id="@+id/update_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:lineSpacingMultiplier="1.5"
+        android:textColor="@color/com_bihe0832_dialog_hint"
+        android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
+        tools:text="1. 适配Android Q \n2. 修复若干bug" />
 
     <ProgressBar
-            android:id="@+id/update_progress_bar"
-            style="@style/CommonProgressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:visibility="invisible" />
+        android:id="@+id/update_progress_bar"
+        style="@style/CommonProgressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="16dp"
+        android:visibility="invisible" />
 
     <RelativeLayout
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp">
+
+        <TextView
+            android:id="@+id/update_progress_percent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp">
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="16dp"
+            android:textColor="@color/com_bihe0832_dialog_hint"
+            android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
+            tools:text="70%" />
 
         <TextView
-                android:id="@+id/update_progress_percent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:textColor="@color/com_bihe0832_dialog_hint"
-                android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
-                android:layout_alignParentLeft="true"
-                tools:text="70%" />
-
-        <TextView
-                android:id="@+id/update_progress_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
-                android:textColor="@color/com_bihe0832_dialog_hint"
-                android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
-                android:layout_alignParentRight="true"
-                tools:text="20M/50M" />
+            android:id="@+id/update_progress_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="16dp"
+            android:textColor="@color/com_bihe0832_dialog_hint"
+            android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
+            tools:text="20M/50M" />
 
     </RelativeLayout>
 
     <View
-            android:id="@+id/update_line"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/com_bihe0832_dialog_split" />
+        android:id="@+id/update_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/com_bihe0832_dialog_split" />
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-                android:id="@+id/update_progress_cancle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:singleLine="true"
-                android:textColor="@color/com_bihe0832_dialog_button"
-                android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
-                tools:text="取消更新" />
+            android:id="@+id/update_progress_cancle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:singleLine="true"
+            android:textColor="@color/com_bihe0832_dialog_button"
+            android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
+            tools:text="取消更新" />
 
         <View
-                android:id="@+id/update_progress_column_line"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/com_bihe0832_dialog_split" />
+            android:id="@+id/update_progress_column_line"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/com_bihe0832_dialog_split" />
 
         <TextView
-                android:id="@+id/update_progress_positive"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:textStyle="bold"
-                android:singleLine="true"
-                android:textColor="@color/com_bihe0832_dialog_button"
-                android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
-                tools:text="后台更新" />
+            android:id="@+id/update_progress_positive"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:singleLine="true"
+            android:textColor="@color/com_bihe0832_dialog_button"
+            android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
+            android:textStyle="bold"
+            tools:text="后台更新" />
     </LinearLayout>
 </LinearLayout>
