Dialog bug 修复，增加内存泄漏检测，优化用户授权及初始化

--- a/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
@@ -38,6 +38,8 @@
     <dimen name="com_bihe0832_dialog_title_text_size">16dp</dimen>
     <dimen name="com_bihe0832_dialog_content_text_size">12dp</dimen>
     <dimen name="com_bihe0832_dialog_tips_text_size">10dp</dimen>
-    <dimen name="com_bihe0832_dialog_button_text_size">@dimen/com_bihe0832_dialog_content_text_size</dimen>
+    <dimen name="com_bihe0832_dialog_button_text_size">
+        @dimen/com_bihe0832_dialog_content_text_size
+    </dimen>
 
 </resources>
