--- a/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
@@ -1,157 +1,161 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/dialog_layout"
-        android:layout_margin="6dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dialog_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp"
+    android:background="@drawable/com_bihe0832_common_dialog_bg"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/com_bihe0832_common_dialog_bg">
+        android:gravity="center"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:textColor="@color/com_bihe0832_dialog_text"
+        android:textSize="@dimen/com_bihe0832_dialog_title_text_size"
+        android:textStyle="bold"
+        android:visibility="visible"
+        tools:text="系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息系统消息" />
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/content_layout_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_weight="1"
+        android:paddingLeft="16dp"
+        android:paddingTop="12dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="6dp"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:lineSpacingMultiplier="1.25"
+                android:scrollbars="vertical"
+                android:textColor="@color/com_bihe0832_dialog_text"
+                android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
+                tools:text="提示消息提消息提示消息提示消息提示消息提示消息提示消息提示消息提消息提示消息提示消息提示消息提示消息提示消息提示消息提消息提示消息提示消息提示消息提示消息提示消息提示消息提消息提示消息提示消息提示消息提示消息提示消息" />
+
+            <CheckBox
+                android:id="@+id/nomore_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                android:text=" 不再提醒我"
+                android:textColor="@color/com_bihe0832_dialog_text"
+                android:textSize="@dimen/com_bihe0832_dialog_tips_text_size"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <ImageView
+                android:id="@+id/content_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:scaleType="fitCenter"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nomore_cb"
+                tools:src="@mipmap/debug"
+                tools:visibility="visible" />
+
+            <LinearLayout
+                android:id="@+id/content_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            app:layout_constrainedWidth="true"
-            android:layout_height="wrap_content"
-            android:textColor="@color/com_bihe0832_dialog_text"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:textSize="@dimen/com_bihe0832_dialog_title_text_size"
-            android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:gravity="center"
-            android:layout_marginTop="24dp"
-            tools:text="系统消息" />
-
-    <TextView
-            android:id="@+id/content"
-            android:layout_width="0dp"
-            app:layout_constrainedWidth="true"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:lineSpacingMultiplier="1.75"
-            android:scrollbars="vertical"
-            android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
-            android:textColor="@color/com_bihe0832_dialog_text"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:text="提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息" />
-
-    <CheckBox
-            android:id="@+id/nomore_cb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            android:text=" 不再提醒我"
-            android:textColor="@color/com_bihe0832_dialog_text"
-            android:textSize="@dimen/com_bihe0832_dialog_tips_text_size"
-            android:visibility="gone"
-            tools:visibility="visible"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content" />
-
-    <ImageView
-            android:id="@+id/content_img"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="12dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nomore_cb"
-            tools:src="@mipmap/debug" />
-
-    <LinearLayout
-            android:id="@+id/content_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content_img"
-            android:orientation="vertical"></LinearLayout>
-
-    <TextView
-            android:id="@+id/feedback"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="@dimen/com_bihe0832_dialog_tips_text_size"
-            android:layout_marginTop="12dp"
-            android:visibility="visible"
-            android:textColor="@color/com_bihe0832_dialog_tips"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/content_layout"
-            tools:text="提示消息提示消息提示消息提示消息" />
+        android:id="@+id/feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:gravity="center"
+        android:textColor="@color/com_bihe0832_dialog_tips"
+        android:textSize="@dimen/com_bihe0832_dialog_tips_text_size"
+        android:visibility="visible"
+        tools:text="提示消息提示消息提示消息提示消息"
+        tools:visibility="visible" />
 
     <View
-            android:id="@+id/line"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/feedback"
-            android:background="@color/com_bihe0832_dialog_split" />
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/com_bihe0832_dialog_split"
+        app:layout_constraintBottom_toTopOf="@+id/button_line"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
+        android:id="@+id/button_line"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/negtive"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line"
-            android:orientation="horizontal">
-
-        <Button
-                android:id="@+id/negtive"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:layout_weight="1"
-                android:background="@color/com_bihe0832_dialog_bg"
-                android:gravity="center"
-                android:singleLine="true"
-                tools:text="前往"
-                android:textColor="@drawable/com_bihe0832_common_select_color"
-                android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
-                />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@color/com_bihe0832_dialog_bg"
+            android:gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:singleLine="true"
+            android:textColor="@drawable/com_bihe0832_common_select_color"
+            android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
+            tools:text="前往"
+            tools:visibility="visible" />
 
         <View
-                android:id="@+id/column_line"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/com_bihe0832_dialog_split" />
+            android:id="@+id/column_line"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/com_bihe0832_dialog_split" />
 
         <Button
-                android:id="@+id/positive"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp"
-                android:background="@color/com_bihe0832_dialog_bg"
-                android:gravity="center"
-                android:singleLine="true"
-                android:textStyle="bold"
-                tools:text="确定"
-                android:textColor="@drawable/com_bihe0832_common_select_color"
-                android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
-                />
+            android:id="@+id/positive"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="@color/com_bihe0832_dialog_bg"
+            android:gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:singleLine="true"
+            android:textColor="@drawable/com_bihe0832_common_select_color"
+            android:textSize="@dimen/com_bihe0832_dialog_button_text_size"
+            android:textStyle="bold"
+            tools:text="确定" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
