--- a/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832_common_base_dialog_res.xml
@@ -42,4 +42,11 @@
         @dimen/com_bihe0832_dialog_content_text_size
     </dimen>
 
+    <string name="dialog_title">温馨提示</string>
+    <string name="dialog_button_cancel">取消</string>
+    <string name="dialog_button_settings">设置</string>
+    <string name="dialog_button_close">关闭</string>
+    <string name="dialog_button_ok">确认</string>
+    <string name="dialog_input_hint">输入完成后点击确认提交</string>
+
 </resources>
