基础库优化，loading dialog 增加多种格式，文件选择优化，文件类型判断优化

--- a/BaseTest/src/main/res/layout/fragment_test_text.xml
+++ b/BaseTest/src/main/res/layout/fragment_test_text.xml
@@ -16,6 +16,13 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <com.bihe0832.android.lib.ui.dialog.view.ProgressIndicatorView
+            android:id="@+id/dots_loading_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="center" />
+
+
         <Button
             android:id="@+id/test_basic_button"
             android:layout_width="match_parent"
@@ -97,8 +104,8 @@
             android:id="@+id/checkbox2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
             android:layout_gravity="center_vertical"
+            android:scaleType="centerCrop"
             android:src="@drawable/test_selector"
             android:visibility="visible" />
 
