--- a/Application/src/main/res/values/file_path.xml
+++ b/Application/src/main/res/values/file_path.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="lib_bihe0832_file_folder">zixie/</string>
+    <string name="lib_bihe0832_file_folder">aaf/</string>
+
 </resources>
