--- a/LibDialog/src/main/res/layout/com_bihe0832_dialog_loading.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_dialog_loading.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loading_main_layout"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    android:orientation="vertical"
     android:padding="40dp">
 
     <ProgressBar
-        android:id="@+id/loading_bar"
+        android:id="@+id/circle_loading_bar"
         style="@style/LoadingProcessStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:background="@android:color/transparent"
-        app:layout_constraintBottom_toTopOf="@+id/loading_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:visibility="gone" />
+
+    <com.bihe0832.android.lib.ui.dialog.view.ProgressIndicatorView
+        android:id="@+id/dots_loading_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/loading_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
         android:text="Loading..."
         android:textColor="@android:color/white"
-        android:textSize="@dimen/com_bihe0832_dialog_title_text_size"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loading_bar"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:textSize="@dimen/com_bihe0832_dialog_content_text_size"
+        android:visibility="visible" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
 
