--- a/LibFileSelect/src/main/res/layout/com_bihe0832_card_item_file.xml
+++ b/LibFileSelect/src/main/res/layout/com_bihe0832_card_item_file.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="48dp"
-              android:orientation="horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/item_file_iv_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:padding="10dp"
-        android:src="@mipmap/ic_file"/>
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        android:src="@mipmap/ic_file_type_file" />
 
     <TextView
         android:id="@+id/item_file_tv_filename"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:gravity="center_vertical"
         android:text="目录"
         android:textColor="@color/secondary_text"
-        android:textSize="14dp"
-        android:textStyle="bold"/>
+        android:textSize="12dp" />
 
     <CheckBox
         android:id="@+id/item_file_cb_selected"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center_vertical"
         android:checked="false"
-        android:focusable="false"/>
+        android:focusable="false" />
 
 </LinearLayout>
