--- a/CommonDebug/src/main/res/values/common_debug_res.xml
+++ b/CommonDebug/src/main/res/values/common_debug_res.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">30dp</dimen>
     <color name="common_debug_activity_split_bg">#c9c9c9</color>
@@ -8,5 +9,7 @@
 
     <color name="common_debug_text">@color/black</color>
     <color name="common_debug_bg">@color/white</color>
+
+    <string name="common_debug_empty_tips">"数据加载中，请稍候"</string>
 
 </resources>
