文件编辑查看工具使用基础库

--- a/CommonAceEditor/src/main/res/layout/fragment_ace_edit.xml
+++ b/CommonAceEditor/src/main/res/layout/fragment_ace_edit.xml
@@ -15,6 +15,7 @@
 
     <com.bihe0832.android.lib.ace.editor.AceEditorView
         android:id="@+id/main_ace_editor"
+        android:paddingBottom="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
