--- a/LibDialog/src/main/res/layout/com_bihe0832_common_progress_dialog.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_progress_dialog.xml
@@ -38,7 +38,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginRight="16dp"
-        android:visibility="invisible" />
+        android:progress="0"
+        android:visibility="invisible"
+        tools:visibility="visible"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
