--- a/LibFile/src/main/res/xml/aaf_inner_file_paths.xml
+++ b/LibFile/src/main/res/xml/aaf_inner_file_paths.xml
@@ -3,21 +3,39 @@
     <root-path name="name" path="" />
 
     <!--内置SD卡 Context.getExternalFilesDir(null) .表示共享所有的目录，也可以指定共享的目录-->
+    <external-files-path name="zixie_download" path="Download"/>
     <external-files-path name="download" path="Download"/>
     <external-files-path name="base" path="."/>
     <external-files-path name="images" path="Pictures"/>
     <external-files-path name="movies" path="Movies"/>
 
+    <!--内置SD卡 Context.getExternalCacheDir() .表示共享所有的目录，也可以指定共享的目录-->
+    <external-cache-path name="zixie_download" path="Download"/>
+    <external-cache-path name="download" path="Download"/>
+    <external-cache-path name="base" path="." />
+    <external-cache-path name="images" path="Pictures" />
+    <external-cache-path name="movies" path="Movies" />
+
+    <!--内置SD卡 Environment.getExternalStorageDirectory() .表示共享所有的目录，也可以指定共享的目录-->
+    <external-path name="zixie_download" path="Download"/>
+    <external-path name="download" path="Download"/>
+    <external-path name="base" path="." />
+    <external-path name="images" path="Pictures" />
+    <external-path name="movies" path="Movies" />
+
     <!--data目录下 Context.getFilesDir() .表示共享所有的目录，也可以指定共享的目录-->
+    <files-path name="zixie_download" path="Download"/>
     <files-path name="download" path="Download"/>
     <files-path name="base" path="." />
     <files-path name="images" path="Pictures" />
     <files-path name="movies" path="Movies" />
 
     <!--data缓存目录 Context.getCacheDir() .表示共享所有的目录，也可以指定共享的目录-->
+    <cache-path name="zixie_download" path="Download"/>
     <cache-path name="download" path="Download"/>
     <cache-path name="base" path="." />
     <cache-path name="images" path="Pictures" />
     <cache-path name="movies" path="Movies" />
+
 
 </paths>
