增加一个简单的通用空白页面

--- a/Framework/src/main/res/layout/common_fragment_with_bottom.xml
+++ b/Framework/src/main/res/layout/common_fragment_with_bottom.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/main_fragment_content"
+        android:id="@+id/fragment_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/main_fragment_bottomBar"
