代码整理优化，dialog按钮字号修改

--- a/Application/src/main/res/values/style_res.xml
+++ b/Application/src/main/res/values/style_res.xml
@@ -10,4 +10,6 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
 
+    <dimen name="com_bihe0832_dialog_button_text_size">16dp</dimen>
+
 </resources>
