--- a/LibDialog/src/main/res/layout/com_bihe0832_common_progress_dialog.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_progress_dialog.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginRight="16dp"
         android:progress="0"
-        android:visibility="invisible"
+        android:visibility="visible"
         tools:visibility="visible"/>
 
     <RelativeLayout
