bottom list dialog 添加

--- a/LibDialog/src/main/res/layout/com_bihe0832_common_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_common_dialog_layout.xml
@@ -118,7 +118,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/negtive"
+            android:id="@+id/negative"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
