--- a/LibPermission/src/main/res/values/com_bihe0832_lib_permission_res.xml
+++ b/LibPermission/src/main/res/values/com_bihe0832_lib_permission_res.xml
@@ -2,10 +2,16 @@
     <string name="com_bihe0832_permission_title">权限申请</string>
     <string name="com_bihe0832_permission_default_scene">完整</string>
     <string name="com_bihe0832_permission_default_desc">部分设备</string>
-    <string name="com_bihe0832_permission_negtive">暂不开启</string>
-    <string name="com_bihe0832_permission_positive">点击开启</string>
+    <string name="com_bihe0832_permission_negtive">暂不授权</string>
+    <string name="com_bihe0832_permission_positive">开启授权</string>
     <string name="com_bihe0832_permission_color">#38ADFF</string>
     <color name="transparent">#00000000</color>
+    <color name="permission_window_bg">#3D000000</color>
+    <color name="permission_tips_bg">#FFFFFF</color>
+    <color name="permission_tips_text_color">@color/com_bihe0832_dialog_content</color>
+    <color name="permission_tips_title_color">@color/com_bihe0832_dialog_title</color>
+
+
 
     <style name="permissionFullscreen" parent="@android:style/Theme.NoTitleBar.Fullscreen">
         <item name="colorPrimary">@color/transparent</item>
@@ -20,4 +26,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
+
+    <string name="com_bihe0832_permission_default_content">%s的%s功能需要手机授予%s权限，缺少权限有可能会影响功能的正常使用。</string>
+
 </resources>
