--- a/BaseDebug/src/main/res/layout/debug_tab_svga.xml
+++ b/BaseDebug/src/main/res/layout/debug_tab_svga.xml
@@ -24,19 +24,18 @@
         android:id="@+id/tab_tips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="-8dp"
         android:layout_marginBottom="-6dp"
         android:background="@drawable/botton_bar_tab_msg"
         android:gravity="center"
         android:minWidth="10dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        tools:text=""
         android:textColor="@color/white"
         android:textSize="9dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
-        app:layout_constraintStart_toEndOf="@+id/tab_icon"
-        tools:text="88" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
         android:id="@+id/tab_tips_dot"
