--- a/CommonAbout/src/main/res/layout/card_setting.xml
+++ b/CommonAbout/src/main/res/layout/card_setting.xml
@@ -49,10 +49,10 @@
             android:id="@+id/settings_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
+            android:layout_marginRight="12dp"
+            android:textColor="@color/colorPrimary"
             android:textSize="14dp"
             android:visibility="visible"
-            android:layout_marginRight="8dp"
             app:layout_constraintBottom_toBottomOf="@+id/settings_title"
             app:layout_constraintEnd_toStartOf="@+id/settings_is_new"
             app:layout_constraintTop_toTopOf="@+id/settings_title"
@@ -60,9 +60,9 @@
 
         <ImageView
             android:id="@+id/settings_is_new"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/read_dot"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:src="@drawable/common_background_red_dot"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/settings_go"
