--- a/BaseDebug/src/main/res/layout/debug_tab_svga.xml
+++ b/BaseDebug/src/main/res/layout/debug_tab_svga.xml
@@ -25,26 +25,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-6dp"
-        android:background="@drawable/botton_bar_tab_msg"
+        android:background="@drawable/common_background_red_dot_msg"
         android:gravity="center"
         android:minWidth="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        tools:text=""
         android:textColor="@color/white"
         android:textSize="9dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="" />
 
     <View
         android:id="@+id/tab_tips_dot"
         android:layout_width="6dp"
         android:layout_height="6dp"
-        android:background="@drawable/botton_bar_tab_msg"
-        android:minWidth="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:background="@drawable/common_background_red_dot"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
         app:layout_constraintStart_toEndOf="@+id/tab_icon" />
