--- a/CommonAbout/src/main/res/layout/about_layout.xml
+++ b/CommonAbout/src/main/res/layout/about_layout.xml
@@ -58,7 +58,7 @@
             android:id="@+id/about_copy_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="12dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorPrimary"
                 android:textSize="12dp" />
 
         </LinearLayout>
