--- a/CommonBottomTab/src/main/res/layout/common_tab_svga.xml
+++ b/CommonBottomTab/src/main/res/layout/common_tab_svga.xml
@@ -26,14 +26,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="-8dp"
         android:layout_marginBottom="-6dp"
-        android:background="@drawable/botton_bar_tab_msg"
+        android:background="@drawable/common_background_red_dot_msg"
         android:gravity="center"
         android:minWidth="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
         android:textColor="@color/white"
         android:textSize="9dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
         app:layout_constraintStart_toEndOf="@+id/tab_icon"
         tools:text="88" />
@@ -42,10 +40,7 @@
         android:id="@+id/tab_tips_dot"
         android:layout_width="6dp"
         android:layout_height="6dp"
-        android:background="@drawable/botton_bar_tab_msg"
-        android:minWidth="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:background="@drawable/common_background_red_dot"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tab_icon"
         app:layout_constraintStart_toEndOf="@+id/tab_icon" />
